@@ -33,6 +33,7 @@ CHANGE LOG
 * Added ability to hide related videos for YouTube videos.
 * Fixed RTL issue causing horizontal scroll bug on Course Overview page.
 * Added basic certificate functionality (templates planned for future release).
+* Fixed 0's showing up on CoursePress pages when Poll Voting Plugin is installed.
 
 = 1.2.5 =
 * Added additional hooks and filters for developers
